<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <string name="name">Name</string>

    <string name="toppings">Toppings</string>

    <string name="shit">Vanilla ice</string>

    <string name="whipped_cream">Whipped cream</string>

    <string name="chocolate">Chocolate</string>

    <string name="quantity">Quantity</string>

    <string name="initial_quantity_value">2</string>

    <string name="order">Order</string>

    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>

    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>

    <string name="order_summary_chocolate">Add chocolate? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>

    <string name="order_summary_shit">Add Shit? <xliff:g example="true" id="addShit">%b</xliff:g></string>

    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>

    <string name="order_summary_price">Total: <xliff:g example="$10" id="price">%s</xliff:g></string>

    <string name="thank_you">Thank you!</string>

    <string name="order_summary_email_subject">Just Java order for <xliff:g example="Amy" id="name">%s</xliff:g></string>

</resources>